[tool.poetry]
name = "st-dgmrf"
version = "0.1.0"
description = ""
authors = ["SilasFriby <silasfriby@gmail.com>"]
readme = "README.md"
packages = [{include = "st_dgmrf"}]

[tool.poetry.dependencies]
python = "^3.11"
igraph = "^0.11.4"
numpy = "^1.26.4"
scipy = "^1.12.0"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
